# gpx-runalyzer

./: README.md  pyproject.toml
docs/: DEVELOPER.md
src/: main.py
src/analysis/: comparison.py  route_similarity.py  splits.py
src/models/: activity.py  gpx_parser.py  metrics.py
src/services/: config.py  store.py
src/ui/: activity_detail.py  comparison_view.py  dashboard.py  formatting.py  main_window.py  settings_dialog.py  theme.py
src/ui/widgets/: activity_list.py  elevation_chart.py  filters.py  map_view.py
tests/: conftest.py  test_activity.py  test_comparison.py  test_formatting.py  test_gpx_parser.py  test_metrics.py  test_route_similarity.py  test_splits.py  test_store.py  test_ui.py
tests/fixtures/: sample.gpx
