[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpx-runalyzer"
version = "0.1.0"
description = "Analyze GPX running activities with a graphical dashboard"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-WebEngine>=6.6.0",
    "pyqtgraph>=0.13.0",
    "lxml>=5.0.0",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
show_error_codes = true
exclude = ["venv", ".pytest_cache", "gpx_runalyzer.egg-info"]

[[tool.mypy.overrides]]
module = ["lxml.*", "pyqtgraph.*", "PyQt6.*"]
ignore_missing_imports = true

[project.scripts]
gpx-runalyzer = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt6"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
